# AWS-Devops-CLI

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml
src/: main.rs
src/commands/: aws_utils.rs  cli_utils.rs  delete_bucket.rs  ec2_connect.rs  ecs_connect.rs  init.rs  inti_aws_state.rs  mod.rs  module.rs  port_forward.rs
